# test

./: README.md  pyproject.toml
.github/workflows/: build-and-deploy.yaml  deploy-preview.yaml  deploy-production.yaml
src/: main.py
src/assets/: manifest.json
src/services/: firebase_client.py
